--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,5 +36,21 @@ spring:
           max-interval: 2000 # 2s
           multiplier: 1.1
 
+  cloud:
+    function:
+      definition: dispatchOrder # Function managed by SpringCloudStream -> defined in OrderFunctions class
+    stream:
+      bindings:
+        dispathcOrder-in-0:
+          destination: order-dispatched # Actual name which binder binds (exchange in RabbitMQ)
+          group: {spring.application.name}
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: user
+    password: password
+    connection-timeout: 5s
+
 polar:
   catalog-service-uri: "http://localhost:9001"
